# tool-timing-channel

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
analysis/: FINDINGS.md  capacity_transfer_results.md  detectability_scaling_results.md  distribution_coupling_results.md  gpu_run3_results.md  overnight_3b_night_report_2026-04-07.md  research_directions.md  token_likelihood_results.md  vps_experiment_results.md
experiments/: 7b_ceiling.py  adversarial_probe.py  adversarial_sweep.py  arms_race.py  arms_race_autonomous.py  bootstrapped_language.py  capability_ladder.py  capacity_and_transfer.py  coupled_probe.py  covert_conversation.py  detectability_scaling.py  encryption_ab_test.py  exfiltration_multiturn.py  latent_bandwidth.py  novel_encodings.py  overnight_3b_sweep.py  relay_demo.py  run_argument.py  run_correction.py  run_table.py  run_volume_binary.py  table_deep_dive.py  timing_local.py  token_detection.py  token_likelihood.py  token_model_comparison.py
prompts/: argument_encoder_v1.txt  ordering_encoder_v1.txt  volume_binary_encoder_v1.txt
remote/: launch-token-stego.sh  run_wave2.sh  run_wave3.sh
scripts/: run_overnight_3b.sh
src/: agent.py  correction.py  harness.py
src/channels/: __init__.py  argument.py  error.py  ordering.py  permutation.py  response_length.py  scaled_table.py  simple.py  table.py  table_multiturn.py  timing.py  volume.py  volume_binary.py
src/token_stego/: __init__.py  activation_probe.py  base.py  channel.py  coding.py  conversation.py  crypto.py  detector.py  latent.py  model.py
tests/: test_agent.py  test_channels.py  test_client.py  test_coding.py  test_correction.py  test_crypto.py  test_experiments.py  test_metrics.py  test_token_stego_fixes.py
