[project]
name = "agent-stego"
version = "0.2.0"
description = "Steganography in AI agent tool calls - covert channels, private languages, and defenses"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["ai-safety", "covert-channels", "agent-security", "tool-use", "side-channels"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "python-dotenv>=1.0.0",
    "openai-agents>=0.13.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
